finsihed with some bugs

--- a/about.html
+++ b/about.html
@@ -5,11 +5,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Welcome to the about page of the wonderful hotel">
+    <meta name="keywords" content="hotel, awesomeness, comfrable, amazing">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Hotel BT | About</title>
 </head>
 
 <body>
-
+    <header>
+        <nav id="navbar">
+            <div class="container">
+                <h1 class="logo">
+                    <a href="index.html">HBT</a>
+                </h1>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html" class="current">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <section id="about-info" class="bg-light py-3">
+        <div class="container">
+            <div class="info-left">
+                <h1 class="l-heading">
+                    <span class="text-primary">About</span> Hotel BT
+                </h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, blanditiis voluptatibus sint laborum
+                    cum assumenda perspiciatis ipsam in maxime similique rerum doloremque, velit optio asperiores quo,
+                    qui sit necessitatibus dolor omnis. Perspiciatis possimus nam a, architecto necessitatibus beatae
+                    sed at?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, praesentium quo vitae veritatis
+                    distinctio suscipit quod ipsum saepe ad iusto, maiores dolores, aspernatur nulla. Molestias aliquid
+                    vitae nesciunt eveniet voluptates.</p>
+            </div>
+            <div class="info-right">
+                <img src="./img/photo-2.jpg" alt="hotel">
+            </div>
+        </div>
+    </section>
+    <div class="clr"></div>
+    <section id="testimonials" class="py-3">
+        <div class="container">
+            <h2 class="l-heading">What Our Guests Say</h2>
+            <div class="testimonial bg-primary">
+                <img src="./img/person-1.jpg" alt="Samantha">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique fuga nam eum a sapiente labore,
+                    exercitationem quisquam tempore animi iste. Laborum fugiat aperiam dolor odit veritatis unde facilis
+                    ullam fugit.</p>
+            </div>
+            <div class="testimonial bg-primary">
+                <img src="./img/person-2.jpg" alt="Jen">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero natus numquam molestias, cum expedita,
+                    veritatis harum, doloremque impedit qui sequi iure quibusdam! Corporis fuga nisi asperiores nesciunt
+                    ut quia. Asperiores, tempore explicabo! Reprehenderit voluptatem amet atque minima voluptate odio
+                    autem?</p>
+            </div>
+        </div>
+    </section>
+    <footer id="main-footer">
+        <p>Hotel BT 2022, All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
