--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <!-- two metas to always add for seo descriptions. meta= description and meta= keywords -->
     <meta name="description" content="Welcome to an awesome hotel that beats all the other hotels in PA.">
     <meta name="keywords" content="hotel, awesome, Pennsylvania, rooms">
+    <!-- fontawsome stuff -->
+    <script src="https://kit.fontawesome.com/c708eee669.js" crossorigin="anonymous"></script>
     <!-- this is the link that is used to connect with the css file -->
     <link rel="stylesheet" href="css/style.css">
     <title>Hotel BT | Welcome</title>
@@ -15,8 +17,71 @@
 
 <body>
     <header>
-        <nav id="navbar"></nav>
+        <nav id="navbar">
+            <div class="container">
+                <h1 class="logo">
+                    <a href="index.html">HBT</a>
+                </h1>
+                <ul>
+                    <li>
+                        <a class="current" href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="contact.html">contact</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div id="showcase">
+            <div class="container">
+                <div class="showcase-content">
+                    <h1>
+                        <span class="text-primary">Enjoy</span> Your Stay
+                    </h1>
+                    <p class="lead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsum alias totam ex.
+                        Doloribus accusantium eos quos deleniti quas praesentium tenetur.</p>
+                    <a href="about.html" class="btn">About Our Hotel</a>
+                </div>
+            </div>
+        </div>
     </header>
+    <section id="home-info" class="bg-dark">
+        <div class="info-img"></div>
+        <div class="info-content">
+            <h2>
+                <span class="text-primary">The History</span> Of Our Hotel
+            </h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, animi id obcaecati maxime soluta
+                similique ea, ipsam at nostrum neque enim nemo quam accusamus quisquam, blanditiis adipisci! Maxime
+                veritatis inventore dolor nesciunt assumenda atque laborum expedita nobis fugiat repellendus? Vero
+                obcaecati optio eum, modi nihil dicta atque ullam veritatis maxime.</p>
+            <a href="about.html" class="btn btn-light">Read More</a>
+        </div>
+    </section>
+    <section class="features">
+        <div class="box bg-light">
+            <i class="fas fa-hotel fa-3x"></i>
+            <h3>Great Location</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, dolorem?</p>
+        </div>
+        <div class="box bg-primary">
+            <i class="fas fa-utensils fa-3x"></i>
+            <h3>Free Meals</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, que optio.</p>
+        </div>
+        <div class="box bg-light">
+            <i class="fas fa-dumbbell fa-3x"></i>
+            <h3>Fitness Room</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, aspernatur?</p>
+        </div>
+    </section>
+    <div class="clr"></div>
+    <footer id="main-footer">
+        <p>Hotel BT 2022, All Rights Reserved</p>
+    </footer>
 </body>
 
 </html>
