--- a/about.html
+++ b/about.html
@@ -57,9 +57,10 @@
             <h2 class="l-heading">What Our Guests Say</h2>
             <div class="testimonial bg-primary">
                 <img src="./img/person-1.jpg" alt="Samantha">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique fuga nam eum a sapiente labore,
-                    exercitationem quisquam tempore animi iste. Laborum fugiat aperiam dolor odit veritatis unde facilis
-                    ullam fugit.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero natus numquam molestias, cum expedita,
+                    veritatis harum, doloremque impedit qui sequi iure quibusdam! Corporis fuga nisi asperiores nesciunt
+                    ut quia. Asperiores, tempore explicabo! Reprehenderit voluptatem amet atque minima voluptate odio
+                    autem?</p>
             </div>
             <div class="testimonial bg-primary">
                 <img src="./img/person-2.jpg" alt="Jen">
@@ -71,7 +72,7 @@
         </div>
     </section>
     <footer id="main-footer">
-        <p>Hotel BT 2022, All Rights Reserved</p>
+        <p>Hotel BT &copy; 2022, All Rights Reserved</p>
     </footer>
 </body>
 
