--- a/contact.html
+++ b/contact.html
@@ -76,7 +76,7 @@
         </div>
     </section>
     <footer id="main-footer">
-        <p>Hotel BT 2022, All Rights Reserved</p>
+        <p>Hotel BT &copy; 2022, All Rights Reserved</p>
     </footer>
 </body>
 
