--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
     <div class="clr"></div>
     <footer id="main-footer">
-        <p>Hotel BT 2022, All Rights Reserved</p>
+        <p>Hotel BT &copy; 2022, All Rights Reserved</p>
     </footer>
 </body>
 
