tunned up hotel page

--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to the about page of the wonderful hotel">
     <meta name="keywords" content="hotel, awesomeness, comfrable, amazing">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px">
     <title>Hotel BT | About</title>
 </head>
 
