--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Welcome to our contact page where you can leave us a message">
     <meta name="keywords" content="contact, awsome, hotel, comfrable">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px">
     <script src="https://kit.fontawesome.com/c708eee669.js" crossorigin="anonymous"></script>
     <title>Hotel BT | Contact</title>
 </head>
