--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <script src="https://kit.fontawesome.com/c708eee669.js" crossorigin="anonymous"></script>
     <!-- this is the link that is used to connect with the css file -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- this is the link to the mobile css which will turn on when the screen size is 768px or less -->
+    <link rel="stylesheet" href="css/mobile.css" media="screen and (max-width: 768px">
     <title>Hotel BT | Welcome</title>
 </head>
 
